# Boolformer-arthurenard

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup-vast-user.sh
config/formula/: noiseless.py  noisy.py
config/transformer/: noiseless.py  noisy.py
scripts/: __init__.py  predict.py  train.py
scripts/benchmarks/grn/: gen_plots.py  internal_run.py
scripts/benchmarks/pmlb/: compute_results.py  create_graphs.py  download_datasets.py  preprocess_dataset.py
scripts/graphs/: __init__.py  noiseless_graphs.py  noisy_graphs.py  temperature_graphs.py
src/: general_functions.py
src/ConfigClasses/: BaseConfig.py  ConfigFormula.py  ConfigTransformer.py  __init__.py
src/formula/: Formula.py  FormulaDataset.py  Vocabulary.py  __init__.py
src/formula/generation_formula/: __init__.py  generator.py  simplificator.py
src/transformer/: LtnTransformer.py  TransformerModel.py  __init__.py  callbacks.py  helper_functions.py  metrics.py
